# DCoders

./: .gitignore  README.md  package-lock.json  workflow_templates.sh
.github/workflows/: UserManagement.yaml  datasource.yaml  datasource_service.yaml  gateway_service.yaml  merradata_service.yaml  weather_ui.yaml  workflow-template.yaml
UserManagement/: .gitignore  .project  Dockerfile  README.md  docker-compose.yml  pom.xml
UserManagement/k8s_deployments/: autoscaler.yaml  deployment.yaml  secrets.yaml  service.yaml
api-gateway/rest/: dummybackend.js  gateway.js  package-lock.json  package.json
api_gateway/: Dockerfile  README.md  dummybackend.js  gateway.js  package-lock.json  package.json
api_gateway/k8s_deployments/: autoscaler.yaml  deployment.yaml  service.yaml
custos/py_client/: custos_tutorial_2021.ipynb
datasource_service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
datasource_service/datasource_service/: main.py  response_model.py
datasource_service/k8s_deployments/: autoscaler.yaml  deployment.yaml  service.yaml
datasource_service/tests/: test_main.py
deployment_scripts/: README.md  copy_files.sh
deployment_scripts/concourse_cd/: README.md  api_gateway.yml  data_source_api.yaml  data_source_api.yml  k8s-secrets.yml  k8s_secrets.yaml  k8s_secrets.yml  merra_data_api.yml  namespace.yaml  pv.yaml  pv1.yaml  (+2 more)
frontend/: README.md  angular.json  package-lock.json  package.json
merradata_service/: Dockerfile  README.md  env_file_name  main.py
weather_ui/: Dockerfile  README.md  package-lock.json  package.json
(+58 files in other folders)
