[tool.poetry]
name = "datasource_service"
version = "0.1.0"
description = ""
authors = ["vinayakgadag <vinayaksgadag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
